<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_activity_cities">Cities</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="city_name">City Name</string>
    <string name="weather_description">Weather Description</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="low_and_high">Low and High</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise_and_sunset">Sunrise and Sunset</string>
    <string name="city">city</string>
    <string name="details">Details</string>
    <string name="city_title">cityTitle</string>
    <string name="author">Author: Sarah Jin</string>
    <string name="title">Title</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="png">.png</string>
    <string name="api">http://openweathermap.org/img/w/</string>
    <string name="weather_today">The weather today is </string>
    <string name = "currentTemp">The current temperature is </string>
    <string name= "low_today">The low today will be </string>
    <string name= "high_today"> degrees Celsius and the high will be </string>
    <string name="degrees"> degrees.</string>
    <string name="degC">degrees Celsius</string>
    <string name ="sunrise">The sunrise today is at </string>
    <string name="sunset"> The sunset today is at </string>
    <string name="wind_is">The wind is </string>
    <string name="ms">m/s</string>
    <string name="and"> and </string>
    <string name="humidity_today">Today\'s humidity: </string>
    <string name="perc">%</string>
    <string name = "more">More</string>
    <string name = "extras">Extra things to do</string>
    <string name="about">About</string>
    <string name="add_city">Add City</string>



</resources>
